// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Using lucide icon components > should adjust the size, stroke color and stroke width 1`] = `
<svg xmlns="http://www.w3.org/2000/svg"
     width="48"
     height="48"
     viewbox="0 0 24 24"
     fill="none"
     stroke="red"
     stroke-width="4"
     stroke-linecap="round"
     stroke-linejoin="round"
>
  <rect fill="none"
        stroke="red"
        stroke-width="4"
        stroke-linecap="round"
        stroke-linejoin="round"
        width="18"
        height="18"
        x="3"
        y="3"
        rx="2"
  >
  </rect>
  <path fill="none"
        stroke="red"
        stroke-width="4"
        stroke-linecap="round"
        stroke-linejoin="round"
        d="M3 9h18"
  >
  </path>
  <path fill="none"
        stroke="red"
        stroke-width="4"
        stroke-linecap="round"
        stroke-linejoin="round"
        d="M3 15h18"
  >
  </path>
  <path fill="none"
        stroke="red"
        stroke-width="4"
        stroke-linecap="round"
        stroke-linejoin="round"
        d="M9 3v18"
  >
  </path>
  <path fill="none"
        stroke="red"
        stroke-width="4"
        stroke-linecap="round"
        stroke-linejoin="round"
        d="M15 3v18"
  >
  </path>
</svg>
`;

exports[`Using lucide icon components > should duplicate properties to children components 1`] = `
<svg xmlns="http://www.w3.org/2000/svg"
     width="24"
     height="24"
     viewbox="0 0 24 24"
     fill="red"
     stroke="white"
     stroke-width="10"
     stroke-linecap="round"
     stroke-linejoin="round"
     data-testid="multiple-children"
>
  <rect fill="red"
        stroke="white"
        stroke-width="10"
        stroke-linecap="round"
        stroke-linejoin="round"
        width="18"
        height="18"
        x="3"
        y="3"
        rx="2"
  >
  </rect>
  <path fill="red"
        stroke="white"
        stroke-width="10"
        stroke-linecap="round"
        stroke-linejoin="round"
        d="M3 9h18"
  >
  </path>
  <path fill="red"
        stroke="white"
        stroke-width="10"
        stroke-linecap="round"
        stroke-linejoin="round"
        d="M3 15h18"
  >
  </path>
  <path fill="red"
        stroke="white"
        stroke-width="10"
        stroke-linecap="round"
        stroke-linejoin="round"
        d="M9 3v18"
  >
  </path>
  <path fill="red"
        stroke="white"
        stroke-width="10"
        stroke-linecap="round"
        stroke-linejoin="round"
        d="M15 3v18"
  >
  </path>
</svg>
`;

exports[`Using lucide icon components > should not scale the strokeWidth when absoluteStrokeWidth is set 1`] = `
<svg xmlns="http://www.w3.org/2000/svg"
     width="48"
     height="48"
     viewbox="0 0 24 24"
     fill="none"
     stroke="red"
     stroke-width="1"
     stroke-linecap="round"
     stroke-linejoin="round"
>
  <rect fill="none"
        stroke="red"
        stroke-width="1"
        stroke-linecap="round"
        stroke-linejoin="round"
        width="18"
        height="18"
        x="3"
        y="3"
        rx="2"
  >
  </rect>
  <path fill="none"
        stroke="red"
        stroke-width="1"
        stroke-linecap="round"
        stroke-linejoin="round"
        d="M3 9h18"
  >
  </path>
  <path fill="none"
        stroke="red"
        stroke-width="1"
        stroke-linecap="round"
        stroke-linejoin="round"
        d="M3 15h18"
  >
  </path>
  <path fill="none"
        stroke="red"
        stroke-width="1"
        stroke-linecap="round"
        stroke-linejoin="round"
        d="M9 3v18"
  >
  </path>
  <path fill="none"
        stroke="red"
        stroke-width="1"
        stroke-linecap="round"
        stroke-linejoin="round"
        d="M15 3v18"
  >
  </path>
</svg>
`;

exports[`Using lucide icon components > should render an component 1`] = `
<svg xmlns="http://www.w3.org/2000/svg"
     width="24"
     height="24"
     viewbox="0 0 24 24"
     fill="none"
     stroke="currentColor"
     stroke-width="2"
     stroke-linecap="round"
     stroke-linejoin="round"
>
  <rect fill="none"
        stroke="currentColor"
        stroke-width="2"
        stroke-linecap="round"
        stroke-linejoin="round"
        width="18"
        height="18"
        x="3"
        y="3"
        rx="2"
  >
  </rect>
  <path fill="none"
        stroke="currentColor"
        stroke-width="2"
        stroke-linecap="round"
        stroke-linejoin="round"
        d="M3 9h18"
  >
  </path>
  <path fill="none"
        stroke="currentColor"
        stroke-width="2"
        stroke-linecap="round"
        stroke-linejoin="round"
        d="M3 15h18"
  >
  </path>
  <path fill="none"
        stroke="currentColor"
        stroke-width="2"
        stroke-linecap="round"
        stroke-linejoin="round"
        d="M9 3v18"
  >
  </path>
  <path fill="none"
        stroke="currentColor"
        stroke-width="2"
        stroke-linecap="round"
        stroke-linejoin="round"
        d="M15 3v18"
  >
  </path>
</svg>
`;

exports[`Using lucide icon components > should work with a single child component 1`] = `
<svg xmlns="http://www.w3.org/2000/svg"
     width="24"
     height="24"
     viewbox="0 0 24 24"
     fill="none"
     stroke="currentColor"
     stroke-width="2"
     stroke-linecap="round"
     stroke-linejoin="round"
     data-testid="single-child"
>
  <rect fill="none"
        stroke="currentColor"
        stroke-width="2"
        stroke-linecap="round"
        stroke-linejoin="round"
        width="18"
        height="18"
        x="3"
        y="3"
        rx="2"
  >
  </rect>
  <path fill="none"
        stroke="currentColor"
        stroke-width="2"
        stroke-linecap="round"
        stroke-linejoin="round"
        d="M3 9h18"
  >
  </path>
  <path fill="none"
        stroke="currentColor"
        stroke-width="2"
        stroke-linecap="round"
        stroke-linejoin="round"
        d="M3 15h18"
  >
  </path>
  <path fill="none"
        stroke="currentColor"
        stroke-width="2"
        stroke-linecap="round"
        stroke-linejoin="round"
        d="M9 3v18"
  >
  </path>
  <path fill="none"
        stroke="currentColor"
        stroke-width="2"
        stroke-linecap="round"
        stroke-linejoin="round"
        d="M15 3v18"
  >
  </path>
  <svg xmlns="http://www.w3.org/2000/svg"
       width="24"
       height="24"
       viewbox="0 0 24 24"
       fill="none"
       stroke="currentColor"
       stroke-width="2"
       stroke-linecap="round"
       stroke-linejoin="round"
       data-testid="child"
  >
    <rect fill="none"
          stroke="currentColor"
          stroke-width="2"
          stroke-linecap="round"
          stroke-linejoin="round"
          width="18"
          height="18"
          x="3"
          y="3"
          rx="2"
    >
    </rect>
    <path fill="none"
          stroke="currentColor"
          stroke-width="2"
          stroke-linecap="round"
          stroke-linejoin="round"
          d="M3 9h18"
    >
    </path>
    <path fill="none"
          stroke="currentColor"
          stroke-width="2"
          stroke-linecap="round"
          stroke-linejoin="round"
          d="M3 15h18"
    >
    </path>
    <path fill="none"
          stroke="currentColor"
          stroke-width="2"
          stroke-linecap="round"
          stroke-linejoin="round"
          d="M9 3v18"
    >
    </path>
    <path fill="none"
          stroke="currentColor"
          stroke-width="2"
          stroke-linecap="round"
          stroke-linejoin="round"
          d="M15 3v18"
    >
    </path>
  </svg>
</svg>
`;

exports[`Using lucide icon components > should work with several children components 1`] = `
<svg xmlns="http://www.w3.org/2000/svg"
     width="24"
     height="24"
     viewbox="0 0 24 24"
     fill="none"
     stroke="currentColor"
     stroke-width="2"
     stroke-linecap="round"
     stroke-linejoin="round"
     data-testid="multiple-children"
>
  <rect fill="none"
        stroke="currentColor"
        stroke-width="2"
        stroke-linecap="round"
        stroke-linejoin="round"
        width="18"
        height="18"
        x="3"
        y="3"
        rx="2"
  >
  </rect>
  <path fill="none"
        stroke="currentColor"
        stroke-width="2"
        stroke-linecap="round"
        stroke-linejoin="round"
        d="M3 9h18"
  >
  </path>
  <path fill="none"
        stroke="currentColor"
        stroke-width="2"
        stroke-linecap="round"
        stroke-linejoin="round"
        d="M3 15h18"
  >
  </path>
  <path fill="none"
        stroke="currentColor"
        stroke-width="2"
        stroke-linecap="round"
        stroke-linejoin="round"
        d="M9 3v18"
  >
  </path>
  <path fill="none"
        stroke="currentColor"
        stroke-width="2"
        stroke-linecap="round"
        stroke-linejoin="round"
        d="M15 3v18"
  >
  </path>
  <svg xmlns="http://www.w3.org/2000/svg"
       width="24"
       height="24"
       viewbox="0 0 24 24"
       fill="none"
       stroke="currentColor"
       stroke-width="2"
       stroke-linecap="round"
       stroke-linejoin="round"
       data-testid="child1"
  >
    <rect fill="none"
          stroke="currentColor"
          stroke-width="2"
          stroke-linecap="round"
          stroke-linejoin="round"
          width="18"
          height="18"
          x="3"
          y="3"
          rx="2"
    >
    </rect>
    <path fill="none"
          stroke="currentColor"
          stroke-width="2"
          stroke-linecap="round"
          stroke-linejoin="round"
          d="M3 9h18"
    >
    </path>
    <path fill="none"
          stroke="currentColor"
          stroke-width="2"
          stroke-linecap="round"
          stroke-linejoin="round"
          d="M3 15h18"
    >
    </path>
    <path fill="none"
          stroke="currentColor"
          stroke-width="2"
          stroke-linecap="round"
          stroke-linejoin="round"
          d="M9 3v18"
    >
    </path>
    <path fill="none"
          stroke="currentColor"
          stroke-width="2"
          stroke-linecap="round"
          stroke-linejoin="round"
          d="M15 3v18"
    >
    </path>
  </svg>
  <svg xmlns="http://www.w3.org/2000/svg"
       width="24"
       height="24"
       viewbox="0 0 24 24"
       fill="none"
       stroke="currentColor"
       stroke-width="2"
       stroke-linecap="round"
       stroke-linejoin="round"
       data-testid="child2"
  >
    <rect fill="none"
          stroke="currentColor"
          stroke-width="2"
          stroke-linecap="round"
          stroke-linejoin="round"
          width="18"
          height="18"
          x="3"
          y="3"
          rx="2"
    >
    </rect>
    <path fill="none"
          stroke="currentColor"
          stroke-width="2"
          stroke-linecap="round"
          stroke-linejoin="round"
          d="M3 9h18"
    >
    </path>
    <path fill="none"
          stroke="currentColor"
          stroke-width="2"
          stroke-linecap="round"
          stroke-linejoin="round"
          d="M3 15h18"
    >
    </path>
    <path fill="none"
          stroke="currentColor"
          stroke-width="2"
          stroke-linecap="round"
          stroke-linejoin="round"
          d="M9 3v18"
    >
    </path>
    <path fill="none"
          stroke="currentColor"
          stroke-width="2"
          stroke-linecap="round"
          stroke-linejoin="round"
          d="M15 3v18"
    >
    </path>
  </svg>
</svg>
`;
